# modded-nanogpt

./: .gitignore  ALFRED.md  pyproject.toml  requirements.txt  run.sh  simple_gpt.py  train_gpt.py
src/modded_nanogpt/: data.py  eval.py  gpt.py  opt.py  train.py  util.py
