[project]
name = "modded-nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
